首页开发|未完成：用例展示、页脚

--- a/web/resources/css/common/slider/camera.css
+++ b/web/resources/css/common/slider/camera.css
@@ -345,6 +345,8 @@
 	border-bottom-left-radius: 4px;
 	overflow: hidden;
 	position: relative;
+    display: none;;
+
 }
 .camera_commands_emboss .camera_thumbs_cont {
 	-moz-box-shadow:
