--- a/web/resources/css/common/slider/caseSlide.css
+++ b/web/resources/css/common/slider/caseSlide.css
@@ -37,9 +37,12 @@
 .scroller .section a img{
     position: absolute;
     top:57px;
-    left: 22px;
-    width: 60px;
-    height: 130px;
+    left: 21.5px;
+    width: 144px;
+    height: 254.5px;
+    border-radius: 4px;
+    box-shadow: 10px #fff;
+  /*border:1px solid red;*/
 }
 .scroller .content {
     WIDTH: 10000px
