--- a/web/resources/css/common/common.css
+++ b/web/resources/css/common/common.css
@@ -1,12 +1,12 @@
+@font-face {
+    font-family: '华康圆体';
+    src: url(../../font/华康圆体W5.TTF);
+}
 body{
     margin:0;
     padding: 0;
     min-width: 1024px;
 }
 *{
-    font-family: '微软雅黑';
-}
-@font-face {
-    font-family: '微软雅黑';
-    src: url(../../font/华康圆体W5.TTF);
+    font-family: '华康圆体';
 }
