--- a/web/resources/css/common/common.css
+++ b/web/resources/css/common/common.css
@@ -10,3 +10,10 @@ body{
 *{
     font-family: '华康圆体';
 }
+.pageContent{
+    margin-top: 70px;
+    min-height: 600px;
+    width: 100%;
+    min-width: 1024px;
+    border:1px solid red;
+}
