--- a/web/resources/css/common/footer.css
+++ b/web/resources/css/common/footer.css
@@ -1,3 +1,4 @@
+@import "common.css";
 .footer{
     width: 800px;
     min-height: 130px;
@@ -37,7 +38,7 @@
     margin:5px;
     color:#fff;
     font-size: 14px;
-    font-family: '微软雅黑';
+    font-family: 'huaKanYuanTi';
 }
 .web_info dl dd strong{
     margin-right: 30px;
