--- a/web/resources/css/common/header.css
+++ b/web/resources/css/common/header.css
@@ -3,11 +3,11 @@
 .top-line-div{
     vertical-align: middle;
     width: 100%;
-    height: 70px;
-    max-height: 70px;
+    height: 80px;
+    max-height: 80px;
     max-width: 100%;
-    background: url("../../images/header_bg.png") ;
-    background-size: 100% 100%;
+    background: url(../../images/common/header.png);
+    background-size:100% 100%;
     color: #ffffff;
     position: fixed;
     border-radius: 0;
@@ -17,8 +17,10 @@
 .top-line-div .navgation{
     min-width: 1024px;
     height: 100%;
-    line-height: 70px;
+    line-height: 80px;
     display: block;
+    float:right;
+    display: inline;
 }
 .top-line-div .navgation li{
     list-style: none;
@@ -26,10 +28,10 @@
 }
 .top-line-div .navgation li a{
     font:bold;
-    font-size: 20px;
+    font-size: 16px;
     color:#eee;
     padding: 2px;
-    font-family: '微软雅黑';
+    font-family: 'huaKanYuanTi';
     text-decoration:none;
     height: 100%;
     width: 100px;
@@ -44,7 +46,7 @@
     background: #0168B7;
 }
 .navChild{
-    font-family: '微软雅黑';
+    font-family: 'huaKanYuanTi';
     text-decoration:none;
     color:#eee;
     background:#292f36;
@@ -67,11 +69,11 @@
     position: relative;
 }
 .logo img{
-    width: 300px;
+    width: 330px;
+    margin-top: 0px;
     height: 80px;
     max-height: 80px;
     float: left;
-    margin-top: -12px;
 }
 .logo .title{
     font-size: 20px;
