--- a/web/resources/css/common/footer.css
+++ b/web/resources/css/common/footer.css
@@ -1,4 +1,3 @@
-@import "common.css";
 .footer{
     width: 800px;
     min-height: 130px;
@@ -38,7 +37,7 @@
     margin:5px;
     color:#fff;
     font-size: 14px;
-    font-family: 'huaKanYuanTi';
+    font-family: '微软雅黑';
 }
 .web_info dl dd strong{
     margin-right: 30px;
