开发|导航样式恢复

--- a/web/resources/css/common/header.css
+++ b/web/resources/css/common/header.css
@@ -12,7 +12,7 @@
     position: fixed;
     border-radius: 0;
     top: 0;
-    left: 0;
+    left: 0
 }
 .top-line-div .navgation{
     min-width: 1024px;
