--- a/web/resources/css/common/slider/caseSlide.css
+++ b/web/resources/css/common/slider/caseSlide.css
@@ -1,80 +1,13 @@
-.scroller {
-    WIDTH: 1024px;
-}
-.scroller .section {
-    WIDTH: 1024px;
-}
-.feature {
-    WIDTH: 1024px;
-    POSITION: relative;
-    padding-top: 15px;
-}
-.feature H2 {
-    MARGIN: 20px 0px 7px;
-    text-align: left;
-    text-indent: 10px;
-}
-
-.scroller {
-    OVERFLOW: hidden;
-    MIN-HEIGHT: 365px;
-}
-.scroller .section {
-    FLOAT: left;
-    OVERFLOW: hidden;
-    WHITE-SPACE: nowrap;
-    MIN-HEIGHT: 365px;
-    TEXT-ALIGN: center;
-}
-.scroller .section a{
-    MIN-HEIGHT: 365px;
-    min-width: 180px;
-    margin:20px;
-    display:inline-block;
-    background:url("../../../images/phone.png") no-repeat 0 0;
-    position: relative;
-}
-.scroller .section a img{
-    position: absolute;
-    top:57px;
-    left: 21.5px;
-    width: 144px;
-    height: 254.5px;
-    border-radius: 4px;
-    box-shadow: 10px #fff;
-  /*border:1px solid red;*/
-}
-.scroller .content {
-    WIDTH: 10000px
-}
-#prevLink {
-    DISPLAY: block;
-    OVERFLOW: hidden;
-    WIDTH: 70px;
-    TEXT-INDENT: -99999px;
-    POSITION: absolute;
-    TOP: 35%;
-    HEIGHT: 70px;
-    /*background-image: url(../../../images/home/slider/case/glider-arrows.png);*/
-    background: url("../../../images/home/left_op.png")no-repeat 0 0;
-}
-#nextLink {
-    DISPLAY: block;
-    OVERFLOW: hidden;
-    WIDTH: 70px;
-    TEXT-INDENT: -99999px;
-    POSITION: absolute;
-    TOP: 35%;
-    HEIGHT: 70px;
-    background: url("../../../images/home/right_op.png")no-repeat 0 0;
-}
-#nextLink {
-    BACKGROUND-POSITION: -10px 0px
-}
-
-#prevLink {
-    LEFT: -18px
-}
-#nextLink {
-    RIGHT: -18px
-}
+a { color:#213f71;text-decoration:none; }
+a:hover { color:#0066cc; }
+.blk_18 { overflow:hidden; zoom:1; background:#4fade2; width:800px; margin-top:8px; }
+.blk_18 .pcont { width:800px; float:left; overflow:hidden; padding-left:5px; }
+.blk_18 .ScrCont { width:32766px; zoom:1; margin-left:-5px; }
+.blk_18 #List1_1, .blk_18 #List2_1 { float:left; }
+.blk_18 .LeftBotton,{ width:15px; height:74px; float:left; background:url("../../../images/home/left_op.png") no-repeat; }
+.blk_18 .RightBotton,{ width:15px; height:74px; float:left; background:url("../../../images/home/right_op.png") no-repeat; }
+.blk_18 .LeftBotton:hover { background-position: -20px 0; }
+.blk_18 .RightBotton:hover { background-position: -20px -100px; }
+.blk_18 .pl img { display:block; cursor:pointer; border:none;margin-top: 32px;margin-left: -3px; }
+.blk_18 .pl { width:150px;height: 350px; float:left; text-align:center; line-height:24px; padding: 25px;background:url("../../../images/phone.png") no-repeat;}
+.blk_18 a.pl:hover {color:#4fade2; background:#4fade2;background:url("../../../images/phone.png") no-repeat; }
