--- a/web/resources/css/home/home.css
+++ b/web/resources/css/home/home.css
@@ -44,10 +44,10 @@
     display: inline-block;
 }
 .product_list li div img{
-    width: 150px;
-    height: 150px;
-    max-width: 150px;
-    max-height: 150px;
+    width: 90px;
+    height: 90px;
+    max-width: 90px;
+    max-height: 90px;
     padding:30px;
     padding-left: 28px;
     overflow: hidden;
@@ -113,6 +113,14 @@
     position: relative;
     top:-90px;
 }
+.sildPicBarCase {
+    width: 1024px;
+    height: 33px;
+    min-width: 1024px;
+    z-index:3;
+    position: relative;
+    top:-250px;
+}
  .pre {
     display: inline;
     background: url("../../images/home/left_op.png")no-repeat 0 0;
@@ -175,7 +183,7 @@
 
 
 .product_slider_div{
-    background: #0168B7;
+    background: #4fade2;
     min-height: 500px;
 }
 .product_slider_div h2{
